clang/test/BSC/Negative/Coroutine/AwaitExpr/await-expr-call-absent/await-expr-call-absent.cbs
// RUN: %clang_cc1 -internal-isystem %S/../../../../../../lib/Headers/bsc_include -verify %s

#include "../../async-func-read-opposite.hbs"

async int f(int start) { 
  await g(); // #1
  int result = await read(1);
  return result;
}

// expected-error@#1 {{use of undeclared identifier 'g'}}

int main() {
  return 0;
}